; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_VerifyNightmare.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_VerifyNightmare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nightmare = common dso_local global i32 0, align 4
@epi = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @M_VerifyNightmare(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 121
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %12

6:                                                ; preds = %1
  %7 = load i32, i32* @nightmare, align 4
  %8 = load i64, i64* @epi, align 8
  %9 = add nsw i64 %8, 1
  %10 = call i32 @G_DeferedInitNew(i32 %7, i64 %9, i32 1)
  %11 = call i32 (...) @M_ClearMenus()
  br label %12

12:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @G_DeferedInitNew(i32, i64, i32) #1

declare dso_local i32 @M_ClearMenus(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
